<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Roomspeaker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="receiverControl_title">Fernsteuerung</string>
    

    <string name="sp_toggle_b1">EG</string>
    <string name="sp_toggle_b2">Gäste-WC</string>
    <string name="sp_toggle_b3">Küche</string>
    <string name="sp_toggle_b4">Wohnzimmer</string>
    <string name="sp_toggle_b5">Terrasse</string>

    <string name="sp_toggle_b6">OG</string>
    <string name="sp_toggle_b7">Schlafzimmer</string>
    <string name="sp_toggle_b8">Bad</string>
    <string name="sp_toggle_b9">Kinderzimmer</string>
    <string name="sp_toggle_b10">Büro</string>

    <string name="sp_toggle_b11">DG</string>
    <string name="sp_toggle_b12">Treppenhaus</string>
    <string name="sp_toggle_b13">Studio</string>
    <string name="sp_toggle_b14">Waschraum</string>

    <string name="sp_toggle_b15">Alles</string>

    <string name="rc_fm_button1">1Live</string>
    <string name="rc_fm_button2">WDR2</string>
    <string name="rc_fm_button3">91.2</string>
    <string name="rc_fm_button4">RTL</string>
    <string name="rc_fm_button5">Unna</string>

    <string name="rc_main_button1">Radio</string>
    <string name="rc_main_button2">Mediaserver</string>
    <string name="rc_main_button3">Studio</string>
    <string name="rc_main_button4">LineIN</string>
    <string name="rc_main_button5">TV</string>

    <string name="rc_vol_button1">-</string>
    <string name="rc_vol_button2">x</string>
    <string name="rc_vol_button3">+</string>
    
    <string name="menu_preferences">Einstellungen</string>
    <string name="menu_refresh">Aktualisieren</string>
    
    <string name="title_settings">Einstellungen</string>
    <string name="settings_close">Beenden</string>

    <string name="settings_url_text">192.168.0.170</string>
    <string name="settings_url_label">Verbindungsurl :</string>
    <string name="settings_url_error">Ungültige IP</string>

    <string name="server_error">Der Server ist nicht erreichbar</string>

    <string name="settings_refreshtime_text">0</string>
    <string name="settings_refreshtime_label">Aktualisierungsrate (Sek) :</string>

    <string name="settings_save_button">Speichern</string>
    <string name="settings_cancel_button">Abbrechen</string>
    <string name="settings_reset_button">Zurücksetzen</string>

    <string name="settings_save_toast">Einstellungen gespeichert</string>
    <string name="settings_cancel_toast">Einstellungen abgebrochen</string>
    <string name="settings_reset_toast">Einstellungen zurückgesetzt</string>
    
    <string name="lh_pers_url">de.juma.home.url</string>
    <string name="lh_pers_refresh">de.juma.home.refresh</string>
    <string name="lh_pers_base">de.juma.home</string>
    
    
    <string name="lh_IP_REGEX">\\b(?:\\d{1,3}\\.){3}\\d{1,3}\\b</string>
    <string name="lh_BASE_URL_END">/gpio/</string>
    <string name="lh_BASE_URL_START">http://</string>
  
    <color name="white">#FFFFFF</color>
    <color name="gray">#878787</color>
    <color name="black">#000000</color>
    <color name="red">#FF0000</color>

</resources>
